--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>tomask's maven repo</h1>
     <p>Have a look at <a href="http://github.com/tomask-de">http://github.com/tomask-de</a> for a list of projects.</p>
-    <p>--> go to <a href="http://github.com/tomask-de/tomask-de.github.com/tree/master/repo">repo</a></p>
+    <p>Go to <a href="http://github.com/tomask-de/tomask-de.github.com/tree/master/repo">repo</a></p>
   </body>
 </html>
