Publishing de.tomask.gradle.jaxb:gradle-jaxb-plugin:2.1

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title>tomask's maven repo</title>
+    <title>tomask's public maven repo</title>
   </head>
   <body>
-    <h1>tomask's maven repo</h1>
+    <h1>tomask's public maven repo</h1>
     <p>Have a look at <a href="http://github.com/tomask-de">http://github.com/tomask-de</a> for a list of projects.</p>
     <p>Go to <a href="http://github.com/tomask-de/tomask-de.github.com/tree/master/repo">repo</a></p>
   </body>
